refactor: Puzzle Mix Application & Test Reflector seeder #55, #54